# 2022FinalDesign

./: CMakeLists.txt  README.md  main.cpp  test.cpp
0_MainPage/: MainPage.cpp  MainPage.h
1_InputStaff/: InputData.cpp  InputData.h
2_SortData/: SortData.cpp  SortData.h
3_PrintData/: PrintData.cpp  PrintData.h
4_SaveToFile/: SaveData.cpp  SaveData.h
5_ExitSystem/: Exit.cpp  Exit.h
Headers/: Data.h  Employee.h  Message.h
Source Files/: Data.cpp  Employee.cpp  Message.cpp
